--- a/home/locale/de/LC_MESSAGES/django.po
+++ b/home/locale/de/LC_MESSAGES/django.po
@@ -3,20 +3,20 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-06-13 22:42+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2016-06-14 14:26+0200\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 1.8.8\n"
 
 #: home/templates/home/home.html:11
 msgid "About"
@@ -68,10 +68,8 @@ msgid "Meet the team"
 msgstr "Das Team"
 
 #: home/templates/home/home.html:125
-#, fuzzy
-#| msgid "Contact"
 msgid "Contact Us"
-msgstr "Schreib uns"
+msgstr "Wir helfen gerne"
 
 #: home/templates/home/home.html:136 home/templates/home/home.html:137
 msgid "Name"
@@ -79,7 +77,7 @@ msgstr "Name"
 
 #: home/templates/home/home.html:137
 msgid "Please enter your name."
-msgstr ""
+msgstr "Bitte geben Sie ihre Namen ein."
 
 #: home/templates/home/home.html:143 home/templates/home/home.html:144
 msgid "Email Address"
@@ -87,23 +85,23 @@ msgstr "Email Adresse"
 
 #: home/templates/home/home.html:144
 msgid "Please enter your email address."
-msgstr ""
+msgstr "Bitte geben Sie Ihre E-Mail Adresse ein."
 
 #: home/templates/home/home.html:150
 msgid "Phone Number"
-msgstr "Telephon Nummer"
+msgstr "Telefonnummer"
 
 #: home/templates/home/home.html:151
 msgid "Phone Number (optional)"
-msgstr ""
+msgstr "Telefonnummer (freiwillige Angabe)"
 
 #: home/templates/home/home.html:157 home/templates/home/home.html:158
 msgid "Message"
-msgstr ""
+msgstr "Nachricht"
 
 #: home/templates/home/home.html:158
 msgid "Please enter a message."
-msgstr ""
+msgstr "Bitte geben Sie eine Nachricht ein."
 
 #: home/templates/home/home.html:166
 msgid "Send"
