Created the about page.

--- a/home/locale/de/LC_MESSAGES/django.po
+++ b/home/locale/de/LC_MESSAGES/django.po
@@ -105,4 +105,4 @@ msgstr "Bitte geben Sie eine Nachricht ein."
 
 #: home/templates/home/home.html:166
 msgid "Send"
-msgstr "Schicken"
+msgstr "Senden"
